# 2025-Project

./: README.md  index.html  pyproject.toml
backend/app/: database.py
backend/app/models/: listing.py  user.py
backend/app/models/listings/: listing.py  photo_gallery.py  price.py
backend/app/models/user/: address_validation_API.py  user_registration.py
backend/app/routes/: routes.py
backend/app/schemas/: schema_format.py
backend/app/services/: stripe.py  user_validation.py
backend/testing_and_in_progress/: FastAPI_testing.py  SQLite_testing.py
frontend/: index.html  styles.css
my-webpage/: README.md  index.html
