[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["wagscoll"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.5"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
stripe = "^12.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
